--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/cook_book
-spring.datasource.username = root
-spring.datasource.password = Anisajon3
+#spring.datasource.url = jdbc:mysql://localhost:3306/cook_book
+#spring.datasource.username = root
+#spring.datasource.password = Anisajon3
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+#spring.mail.host=daisbuild.com.au
+#spring.mail.port=465
+#spring.mail.username=daisbuild@daisbuild.com.au
+#spring.mail.password=Anisajon3
+
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable = true
+
