--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-!**/src/main/resources/application-secret.properties
-!**/src/main/resources/application-prod.properties
+**/src/main/resources/application-secret.properties
+**/src/main/resources/application-prod.properties
