--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable = true
 
-spring.profiles.active=secret
+spring.profiles.active=prod
